Name:                dimensional
Version:             0.5
Synopsis:            Statically checked physical dimensions.
License:             BSD3
License-File:        LICENSE
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Build-Depends:       base,
                     time
Exposed-Modules:     Buckwalter.NumType, 
                     Buckwalter.Dimensional, 
                     Buckwalter.Dimensional.Quantities,
                     Buckwalter.Dimensional.SIUnits,
                     Buckwalter.Dimensional.Prelude,
                     Buckwalter.Dimensional.NonSI,
                     Buckwalter.Dimensional.Extensible
ghc-options:         -O
 
