Name:                dimensional
Version:             0.6
Synopsis:            Statically checked physical dimensions.
License:             BSD3
License-File:        LICENSE
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Build-Depends:       base,
                     time
Exposed-Modules:     Buckwalter.NumType, 
                     Buckwalter.Dimensional, 
                     Buckwalter.Dimensional.Quantities,
                     Buckwalter.Dimensional.SIUnits,
                     Buckwalter.Dimensional.Prelude,
                     Buckwalter.Dimensional.NonSI,
                     Buckwalter.Dimensional.Extensible,
                     Buckwalter.Dimensional.CGS
ghc-options:         -O
 
